# fast-api-sentiment-analysis

./: http.rest  main.py  pyproject.toml
