[tool.poetry]
name = "text"
version = "0.1.0"
description = ""
authors = ["Argana Phangquestian <arganaphangquestian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
transformers = "^4.37.2"
torch = "^2.2.0"
torchvision = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
